@@ -8,7 +8,7 @@ C++ API to allow kernel scheduling, bitstream analysis, and more via XRT directl
 
 This example executes a kernel on the FPGA that takes one buffer as output and
 two scalar values as input.
-The `prepare_bitstream` function can be used to generate Julia functions for all kernels implemented in the bitstream by parsing its meta data.
+The `@prepare_bitstream` macro can be used to generate Julia functions for all kernels implemented in the bitstream by parsing its meta data.
 Buffer synchronization is handled automatically by XRT.jl.
 An example code for the execution of a kernel `dummyKernel` in the bitstream is given below:
 
@@ -19,12 +19,16 @@ using ArrayAllocators
 # Allocate an output array
 a = Array{UInt8}(MemAlign(4096),1)
 
-# Load the bitstream to the FPGA and generate functions 
-# for each kernel
-bs = XRT.prepare_bitstream("communication_PCIE.xclbin")
+# Generate functions for each kernel in
+# the bitstream. Do this in a separate module
+# for convenience
+module Bitstream
+    using XRT
+    @prepare_bitstream("communication_PCIE.xclbin")
+end
 
-# execute the dummyKernel kernel
-bs.dummyKernel!(a, UInt8(1),1)
+# Program the bitstream to a specific device and execute the kernel
+Bitstream.dummyKernel!(a, UInt8(1),1; device=XRT.Device(0))
 
 # validate the execution results
 @assert all(a .== UInt8(1))
